[gd_scene load_steps=18 format=3 uid="uid://bjrqcx0k7scpa"]

[ext_resource type="Theme" uid="uid://j8encu3x20ng" path="res://assets/uiux/main_menu/default_theme.tres" id="1_nvabs"]
[ext_resource type="Shader" path="res://assets/uiux/main_menu/scrolling_background.gdshader" id="2_40555"]
[ext_resource type="Texture2D" uid="uid://co7e0p20gqlnk" path="res://assets/uiux/main_menu/main_menu_bg.tga" id="3_0ceap"]
[ext_resource type="Script" path="res://assets/uiux/main_menu/VBoxContainer.gd" id="4_m7qn0"]
[ext_resource type="AudioStream" uid="uid://dimbdo2k6d1uw" path="res://assets/uiux/main_menu/sfx_click.mp3" id="5_wgsqa"]
[ext_resource type="AudioStream" uid="uid://c77k0qy3iet7e" path="res://assets/uiux/main_menu/sfx_hover.mp3" id="6_yjl57"]
[ext_resource type="FontFile" uid="uid://c70rl4plqsm7n" path="res://assets/uiux/main_menu/NeonSans.otf" id="7_0lt2a"]
[ext_resource type="AudioStream" uid="uid://b0ptosh66cxrl" path="res://assets/uiux/main_menu/bgm_main.mp3" id="8_jrbwk"]
[ext_resource type="LabelSettings" uid="uid://7k1y84tgkfmp" path="res://assets/uiux/main_menu/Header.tres" id="9_hikva"]
[ext_resource type="LabelSettings" uid="uid://dxlqrchaysuhr" path="res://assets/uiux/main_menu/SettingLabel.tres" id="10_3kdfa"]
[ext_resource type="Script" path="res://assets/scenes/MasterVolume.gd" id="11_e6ba1"]
[ext_resource type="StyleBox" uid="uid://dcuqsqcektumy" path="res://assets/uiux/main_menu/volumeSlider.res" id="11_sycm3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7crkb"]
shader = ExtResource("2_40555")

[sub_resource type="CanvasTexture" id="CanvasTexture_52of6"]
diffuse_texture = ExtResource("3_0ceap")
texture_repeat = 2

[sub_resource type="LabelSettings" id="LabelSettings_51ggh"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7iv0q"]
bg_color = Color(0.670588, 0.54902, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fcyc0"]
bg_color = Color(0.67, 0.55, 1, 1)

[node name="MainMenu" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_nvabs")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_7crkb")
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2375
anchor_top = -0.288778
anchor_right = 1.712
anchor_bottom = 1.91078
offset_left = -8.0
offset_top = -0.0800605
offset_right = 1288.64
offset_bottom = 720.24
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = SubResource("CanvasTexture_52of6")
expand_mode = 3
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Stack_0" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Stack_0"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467
anchor_top = 0.664
anchor_right = 0.533
anchor_bottom = 0.82
offset_left = 581.488
offset_top = 442.788
offset_right = 660.848
offset_bottom = 555.548
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(40, 58)
theme_override_constants/separation = 10
script = ExtResource("4_m7qn0")

[node name="StartButton" type="Button" parent="Stack_0/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
text = "Start
"

[node name="OptionsButton" type="Button" parent="Stack_0/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Options"

[node name="QuitButton" type="Button" parent="Stack_0/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quit"

[node name="ClickSFX" type="AudioStreamPlayer2D" parent="Stack_0/VBoxContainer"]
stream = ExtResource("5_wgsqa")
bus = &"SFX"

[node name="HoverSFX" type="AudioStreamPlayer2D" parent="Stack_0/VBoxContainer"]
stream = ExtResource("6_yjl57")
bus = &"SFX"

[node name="HBoxContainer" type="HBoxContainer" parent="Stack_0"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.857
anchor_top = 0.879
anchor_right = 0.928
anchor_bottom = 0.918
offset_left = 1060.85
offset_top = 593.429
offset_right = 1133.01
offset_bottom = 624.869
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(75, 30)

[node name="CreditsButton" type="Button" parent="Stack_0/HBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="TitleHeader" type="Label" parent="Stack_0"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.259
anchor_top = 0.235
anchor_right = 0.741
anchor_bottom = 0.449
offset_left = 282.64
offset_top = 156.813
offset_right = 957.36
offset_bottom = 314.253
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nvabs")
theme_override_colors/font_color = Color(0.575234, 0.38969, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.235294)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("7_0lt2a")
theme_override_font_sizes/font_size = 145
text = "alltimer"
uppercase = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_jrbwk")
volume_db = -30.0
autoplay = true
bus = &"Music"

[node name="Options_1" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsHeader" type="Label" parent="Options_1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -248.0
offset_top = 72.0
offset_right = 242.0
offset_bottom = 210.0
grow_horizontal = 2
text = "Options"
label_settings = ExtResource("9_hikva")

[node name="OptionsSubMenus" type="VBoxContainer" parent="Options_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 584.0
offset_top = 336.0
offset_right = -584.0
offset_bottom = -277.0
grow_horizontal = 2
grow_vertical = 2

[node name="DisplayOptions" type="Button" parent="Options_1/OptionsSubMenus"]
layout_mode = 2
text = "Display"

[node name="SoundOptions" type="Button" parent="Options_1/OptionsSubMenus"]
layout_mode = 2
text = "Sound"

[node name="GameOptions" type="Button" parent="Options_1/OptionsSubMenus"]
layout_mode = 2
text = "Game"

[node name="Options_1_Return" type="Button" parent="Options_1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.419
anchor_top = 0.833
anchor_right = 0.587
anchor_bottom = 0.9
offset_left = 7.67993
offset_top = 8.23993
offset_right = -7.35999
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="Options_Display" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 64.0
offset_right = -72.0
offset_bottom = -72.0

[node name="Display" type="Label" parent="Options_Display"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 8.0
offset_right = 240.0
offset_bottom = 113.0
grow_horizontal = 2
text = "Display"
label_settings = ExtResource("9_hikva")

[node name="OptionsList" type="VBoxContainer" parent="Options_Display"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -100.0
offset_right = 456.0
offset_bottom = 244.0
grow_vertical = 2

[node name="DisplayType" type="HBoxContainer" parent="Options_Display/OptionsList"]
layout_mode = 2

[node name="Label" type="Label" parent="Options_Display/OptionsList/DisplayType"]
layout_mode = 2
text = "Display type:"
label_settings = ExtResource("10_3kdfa")

[node name="DisplayList" type="OptionButton" parent="Options_Display/OptionsList/DisplayType"]
layout_mode = 2
flat = true
alignment = 1
item_count = 3
selected = 1
allow_reselect = true
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1
popup/item_2/text = "Borderless Window"
popup/item_2/id = 2

[node name="ResolutionSettings" type="HBoxContainer" parent="Options_Display/OptionsList"]
layout_mode = 2

[node name="ScreenResolution" type="Label" parent="Options_Display/OptionsList/ResolutionSettings"]
layout_mode = 2
text = "Screen resolution: "
label_settings = ExtResource("10_3kdfa")

[node name="ResolutionsList" type="OptionButton" parent="Options_Display/OptionsList/ResolutionSettings"]
layout_mode = 2
flat = true
item_count = 1
selected = 0
popup/item_0/text = "1080 x 720"
popup/item_0/id = 0

[node name="ButtonIcons" type="HBoxContainer" parent="Options_Display/OptionsList"]
layout_mode = 2

[node name="InputDisplay" type="Label" parent="Options_Display/OptionsList/ButtonIcons"]
layout_mode = 2
text = "Input display:"
label_settings = ExtResource("10_3kdfa")

[node name="OptionButton" type="OptionButton" parent="Options_Display/OptionsList/ButtonIcons"]
layout_mode = 2
flat = true
alignment = 1
item_count = 5
selected = 0
popup/item_0/text = "Auto"
popup/item_0/id = 0
popup/item_1/text = "PC"
popup/item_1/id = 1
popup/item_2/text = "XBOX"
popup/item_2/id = 2
popup/item_3/text = "PlayStation"
popup/item_3/id = 3
popup/item_4/text = "Nintendo"
popup/item_4/id = 4

[node name="SessionThemes" type="HBoxContainer" parent="Options_Display/OptionsList"]
layout_mode = 2

[node name="Interface Theme" type="Label" parent="Options_Display/OptionsList/SessionThemes"]
layout_mode = 2
text = "Interface theme: "
label_settings = ExtResource("10_3kdfa")

[node name="OptionButton" type="OptionButton" parent="Options_Display/OptionsList/SessionThemes"]
layout_mode = 2
flat = true
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "Chalkboard"
popup/item_0/id = 0
popup/item_1/text = "MGS Radio"
popup/item_1/id = 1
popup/item_2/text = "Persona"
popup/item_2/id = 2
popup/item_3/text = "PKMN"
popup/item_3/id = 3

[node name="Options_Display_Return" type="Button" parent="Options_Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.387
anchor_top = 0.918
anchor_right = 0.62
anchor_bottom = 1.0
offset_left = 32.368
offset_top = 7.888
offset_right = -32.32
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Options_Sound" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 64.0
offset_right = -72.0
offset_bottom = -72.0

[node name="Sound" type="Label" parent="Options_Sound"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 8.0
offset_right = 176.0
offset_bottom = 146.0
grow_horizontal = 2
text = "Sound
"
label_settings = ExtResource("9_hikva")

[node name="ColorRect" type="ColorRect" parent="Options_Sound/Sound"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.977
anchor_top = 1.159
anchor_right = 0.205
anchor_bottom = 3.884
offset_left = -0.0959778
offset_top = 0.0579987
offset_right = -0.160004
offset_bottom = 0.00793457
grow_vertical = 2
color = Color(0, 0, 0, 0.313726)

[node name="SettingsList" type="VBoxContainer" parent="Options_Sound"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -116.0
offset_right = 424.0
offset_bottom = 260.0
grow_vertical = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="Options_Sound/SettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="Options_Sound/SettingsList/HBoxContainer5"]
layout_mode = 2
text = "Sound device: "
label_settings = ExtResource("10_3kdfa")

[node name="OptionButton" type="OptionButton" parent="Options_Sound/SettingsList/HBoxContainer5"]
layout_mode = 2
flat = true
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "System Default"
popup/item_0/id = 0
popup/item_1/text = "Corsair VOID"
popup/item_1/id = 1
popup/item_2/text = "THQ Spatial Speakers"
popup/item_2/id = 2

[node name="VolumeControlHeader" type="Label" parent="Options_Sound/SettingsList"]
layout_mode = 2
text = "Volume Controls"
label_settings = SubResource("LabelSettings_51ggh")

[node name="VolumeSlidersCase" type="VBoxContainer" parent="Options_Sound/SettingsList/VolumeControlHeader"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.733
anchor_right = 1.032
anchor_bottom = 6.8
offset_top = 0.0149994
offset_right = 0.0959778

[node name="Master" type="Label" parent="Options_Sound/SettingsList/VolumeControlHeader/VolumeSlidersCase"]
layout_mode = 2
text = "- Master - "
label_settings = ExtResource("10_3kdfa")
horizontal_alignment = 1

[node name="VolumeControl" type="HSlider" parent="Options_Sound/SettingsList/VolumeControlHeader/VolumeSlidersCase"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/slider = ExtResource("11_sycm3")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7iv0q")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_fcyc0")
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 5
ticks_on_borders = true
script = ExtResource("11_e6ba1")
bus_name = "Master"

[node name="Music" type="Label" parent="Options_Sound/SettingsList/VolumeControlHeader/VolumeSlidersCase"]
layout_mode = 2
text = "- Music -
"
label_settings = ExtResource("10_3kdfa")
horizontal_alignment = 1

[node name="VolumeControl2" type="HSlider" parent="Options_Sound/SettingsList/VolumeControlHeader/VolumeSlidersCase"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/slider = ExtResource("11_sycm3")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7iv0q")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_fcyc0")
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 5
ticks_on_borders = true
script = ExtResource("11_e6ba1")
bus_name = "Music"

[node name="SFX" type="Label" parent="Options_Sound/SettingsList/VolumeControlHeader/VolumeSlidersCase"]
layout_mode = 2
text = "- Sound Effects -
"
label_settings = ExtResource("10_3kdfa")
horizontal_alignment = 1

[node name="VolumeControl3" type="HSlider" parent="Options_Sound/SettingsList/VolumeControlHeader/VolumeSlidersCase"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/slider = ExtResource("11_sycm3")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7iv0q")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_fcyc0")
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 5
ticks_on_borders = true
script = ExtResource("11_e6ba1")
bus_name = "SFX"

[node name="VO" type="Label" parent="Options_Sound/SettingsList/VolumeControlHeader/VolumeSlidersCase"]
layout_mode = 2
text = "- Voiceover -
"
label_settings = ExtResource("10_3kdfa")
horizontal_alignment = 1

[node name="VolumeControl4" type="HSlider" parent="Options_Sound/SettingsList/VolumeControlHeader/VolumeSlidersCase"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/slider = ExtResource("11_sycm3")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7iv0q")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_fcyc0")
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 5
ticks_on_borders = true
script = ExtResource("11_e6ba1")
bus_name = "VO"

[node name="Options_Sound_Return" type="Button" parent="Options_Sound"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -40.0
offset_right = 104.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Options_Game" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 64.0
offset_right = -72.0
offset_bottom = -72.0

[node name="Game" type="Label" parent="Options_Game"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = 8.0
offset_right = 148.0
offset_bottom = 146.0
grow_horizontal = 2
text = "Game"
label_settings = ExtResource("9_hikva")

[node name="SettingsList" type="VBoxContainer" parent="Options_Game"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = -124.0
offset_right = 408.0
offset_bottom = 300.0
grow_vertical = 2

[node name="TimerSetting" type="HBoxContainer" parent="Options_Game/SettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="Options_Game/SettingsList/TimerSetting"]
layout_mode = 2
text = "Round timer length: "
label_settings = ExtResource("10_3kdfa")

[node name="OptionButton" type="OptionButton" parent="Options_Game/SettingsList/TimerSetting"]
layout_mode = 2
flat = true
alignment = 1
item_count = 4
selected = 2
popup/item_0/text = "5 Sec"
popup/item_0/id = 0
popup/item_1/text = "10 Sec"
popup/item_1/id = 1
popup/item_2/text = "30 Sec"
popup/item_2/id = 2
popup/item_3/text = "1 min"
popup/item_3/id = 3

[node name="WinConditions" type="HBoxContainer" parent="Options_Game/SettingsList"]
layout_mode = 2

[node name="WinCondition" type="Label" parent="Options_Game/SettingsList/WinConditions"]
layout_mode = 2
text = "Win condition:"
label_settings = ExtResource("10_3kdfa")

[node name="OptionButton" type="OptionButton" parent="Options_Game/SettingsList/WinConditions"]
layout_mode = 2
flat = true
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Highest score after 10 questions"
popup/item_0/id = 0
popup/item_1/text = "First to answer 10 questions correctly"
popup/item_1/id = 1
popup/item_2/text = "First to reach 1000 points"
popup/item_2/id = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Options_Game/SettingsList"]
layout_mode = 2

[node name="AltRulesHeader" type="Label" parent="Options_Game/SettingsList/HBoxContainer2"]
layout_mode = 2
text = "- Alternate rules -"
label_settings = ExtResource("10_3kdfa")

[node name="AltRulesContainer" type="VBoxContainer" parent="Options_Game/SettingsList"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Options_Game/SettingsList/AltRulesContainer"]
layout_mode = 2

[node name="ShowTallies" type="Label" parent="Options_Game/SettingsList/AltRulesContainer/HBoxContainer"]
layout_mode = 2
text = "Show tallies"
label_settings = ExtResource("10_3kdfa")

[node name="CheckBox" type="CheckBox" parent="Options_Game/SettingsList/AltRulesContainer/HBoxContainer"]
layout_mode = 2
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Options_Game/SettingsList/AltRulesContainer"]
layout_mode = 2

[node name="Lose4Skip" type="Label" parent="Options_Game/SettingsList/AltRulesContainer/HBoxContainer2"]
layout_mode = 2
text = "Lose points for skipping"
label_settings = ExtResource("10_3kdfa")

[node name="CheckBox" type="CheckBox" parent="Options_Game/SettingsList/AltRulesContainer/HBoxContainer2"]
layout_mode = 2
flat = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Options_Game/SettingsList/AltRulesContainer"]
layout_mode = 2

[node name="GamblingOn" type="Label" parent="Options_Game/SettingsList/AltRulesContainer/HBoxContainer3"]
layout_mode = 2
text = "Gambling modes"
label_settings = ExtResource("10_3kdfa")

[node name="CheckBox" type="CheckBox" parent="Options_Game/SettingsList/AltRulesContainer/HBoxContainer3"]
layout_mode = 2
flat = true

[node name="CategoryWhitelistButton" type="Button" parent="Options_Game/SettingsList"]
layout_mode = 2
text = "Enable/Disable Categories"

[node name="Options_Game_Return" type="Button" parent="Options_Game"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -40.0
offset_right = 104.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="button_down" from="Stack_0/VBoxContainer/StartButton" to="Stack_0/VBoxContainer" method="_on_start_button_button_down"]
[connection signal="button_up" from="Stack_0/VBoxContainer/StartButton" to="Stack_0/VBoxContainer" method="_on_start_button_button_up"]
[connection signal="focus_entered" from="Stack_0/VBoxContainer/StartButton" to="Stack_0/VBoxContainer" method="_on_start_button_focus_entered"]
[connection signal="mouse_entered" from="Stack_0/VBoxContainer/StartButton" to="Stack_0/VBoxContainer" method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="Stack_0/VBoxContainer/StartButton" to="Stack_0/VBoxContainer" method="_on_start_button_pressed"]
[connection signal="button_down" from="Stack_0/VBoxContainer/OptionsButton" to="Stack_0/VBoxContainer" method="_on_options_button_button_down"]
[connection signal="focus_entered" from="Stack_0/VBoxContainer/OptionsButton" to="Stack_0/VBoxContainer" method="_on_options_button_focus_entered"]
[connection signal="mouse_entered" from="Stack_0/VBoxContainer/OptionsButton" to="Stack_0/VBoxContainer" method="_on_options_button_mouse_entered"]
[connection signal="button_down" from="Stack_0/VBoxContainer/QuitButton" to="Stack_0/VBoxContainer" method="_on_quit_button_button_down"]
[connection signal="focus_entered" from="Stack_0/VBoxContainer/QuitButton" to="Stack_0/VBoxContainer" method="_on_quit_button_focus_entered"]
[connection signal="mouse_entered" from="Stack_0/VBoxContainer/QuitButton" to="Stack_0/VBoxContainer" method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="Stack_0/VBoxContainer/QuitButton" to="Stack_0/VBoxContainer" method="_on_quit_button_pressed"]
[connection signal="button_down" from="Stack_0/HBoxContainer/CreditsButton" to="Stack_0/VBoxContainer" method="_on_credits_button_button_down"]
[connection signal="focus_entered" from="Stack_0/HBoxContainer/CreditsButton" to="Stack_0/VBoxContainer" method="_on_credits_button_focus_entered"]
[connection signal="mouse_entered" from="Stack_0/HBoxContainer/CreditsButton" to="Stack_0/VBoxContainer" method="_on_credits_button_mouse_entered"]
[connection signal="focus_entered" from="Options_1/OptionsSubMenus/DisplayOptions" to="Stack_0/VBoxContainer" method="_on_display_options_focus_entered"]
[connection signal="mouse_entered" from="Options_1/OptionsSubMenus/DisplayOptions" to="Stack_0/VBoxContainer" method="_on_display_options_mouse_entered"]
[connection signal="pressed" from="Options_1/OptionsSubMenus/DisplayOptions" to="Stack_0/VBoxContainer" method="_on_display_options_pressed"]
[connection signal="focus_entered" from="Options_1/OptionsSubMenus/SoundOptions" to="Stack_0/VBoxContainer" method="_on_sound_options_focus_entered"]
[connection signal="mouse_entered" from="Options_1/OptionsSubMenus/SoundOptions" to="Stack_0/VBoxContainer" method="_on_sound_options_mouse_entered"]
[connection signal="pressed" from="Options_1/OptionsSubMenus/SoundOptions" to="Stack_0/VBoxContainer" method="_on_sound_options_pressed"]
[connection signal="focus_entered" from="Options_1/OptionsSubMenus/GameOptions" to="Stack_0/VBoxContainer" method="_on_game_options_focus_entered"]
[connection signal="mouse_entered" from="Options_1/OptionsSubMenus/GameOptions" to="Stack_0/VBoxContainer" method="_on_game_options_mouse_entered"]
[connection signal="pressed" from="Options_1/OptionsSubMenus/GameOptions" to="Stack_0/VBoxContainer" method="_on_game_options_pressed"]
[connection signal="focus_entered" from="Options_1/Options_1_Return" to="Stack_0/VBoxContainer" method="_on_options_1_return_focus_entered"]
[connection signal="mouse_entered" from="Options_1/Options_1_Return" to="Stack_0/VBoxContainer" method="_on_options_1_return_mouse_entered"]
[connection signal="pressed" from="Options_1/Options_1_Return" to="Stack_0/VBoxContainer" method="_on_options_1_return_pressed"]
[connection signal="item_selected" from="Options_Display/OptionsList/DisplayType/DisplayList" to="Stack_0/VBoxContainer" method="_on_display_list_item_selected"]
[connection signal="focus_entered" from="Options_Display/Options_Display_Return" to="Stack_0/VBoxContainer" method="_on_options_display_return_focus_entered"]
[connection signal="mouse_entered" from="Options_Display/Options_Display_Return" to="Stack_0/VBoxContainer" method="_on_options_display_return_mouse_entered"]
[connection signal="pressed" from="Options_Display/Options_Display_Return" to="Stack_0/VBoxContainer" method="_on_options_display_return_pressed"]
[connection signal="focus_entered" from="Options_Sound/Options_Sound_Return" to="Stack_0/VBoxContainer" method="_on_options_sound_return_focus_entered"]
[connection signal="mouse_entered" from="Options_Sound/Options_Sound_Return" to="Stack_0/VBoxContainer" method="_on_options_sound_return_mouse_entered"]
[connection signal="pressed" from="Options_Sound/Options_Sound_Return" to="Stack_0/VBoxContainer" method="_on_options_sound_return_pressed"]
[connection signal="focus_entered" from="Options_Game/Options_Game_Return" to="Stack_0/VBoxContainer" method="_on_options_game_return_focus_entered"]
[connection signal="mouse_entered" from="Options_Game/Options_Game_Return" to="Stack_0/VBoxContainer" method="_on_options_game_return_mouse_entered"]
[connection signal="pressed" from="Options_Game/Options_Game_Return" to="Stack_0/VBoxContainer" method="_on_options_game_return_pressed"]
